--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/wall-modal.css">
+
 <div id="login-modal"
     class="wall-modal-backdrop position-fixed top-0 left-0 w-100 h-100 modal-container justify-content-center align-items-center">
     <div class="container">
