--- a/views/notfound.handlebars
+++ b/views/notfound.handlebars
@@ -7,6 +7,6 @@
   changed or is temporarily unavailable.
 
 </p>
-<a href="/room/general">Back to homepage</a>
+<a href="/">Back to homepage</a>
 
 </div>
