--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/wall-modal.css">
+
 <div id="register-modal"
     class="wall-modal-backdrop position-fixed top-0 left-0 w-100 h-100 d-flex justify-content-center align-items-center">
 
