--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,7 +82,7 @@ body {
 .quotes {
   color: #98c379;
   align-self: center;
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
   font-size: 2rem;
 }
 
@@ -152,15 +152,18 @@ body {
   }
 }
 
-@media only screen and (min-width: 401px) {
+@media only screen and (min-width: 501px) {
   .mobile-settings a {
     display: none;
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
   .dropdown-center {
     display: none;
+  }
+  .logo-container {
+    padding-left: 0px !important;
   }
 }
 
