--- a/public/css/user-info-modal.css
+++ b/public/css/user-info-modal.css
@@ -1,5 +1,5 @@
 .modal-content {
-  display: block;
+  display: none;
   position: absolute;
   top: 15%;
   right: 100%;
@@ -44,6 +44,10 @@
 
 .favlang-usermodal{
   margin-top: -30px;
+}
+
+.dropdown-toggle::after{
+  display: none;
 }
 
 @media only screen and (max-width: 770px) {
