--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -15,7 +15,7 @@
                     placeholder="userName" />
                 <input type="password" name="password" id="registerPassword" autocomplete="on" placeholder="passWord" />
                 <input type="text" name="github-username" id="gitHubUserName" autocomplete="on"
-                    placeholder="github - optional" />
+                    placeholder="github username" />
 
                 <button class="btn wall-modal-btn mb-3" id="register-button">Submit</button>
             </form>
