--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -7,7 +7,7 @@
 
     <i class="fas fa-lg fa-arrow-left back-arrow align-self-center" id="settings-go-back"></i>
 
-    <h2 class="flex-grow-1 text-center settings-title">Settings(
+    <h2 class="flex-grow-1 text-center settings-title">function <span class="settings-function">Settings</span>(
       <p class="settings-variable">myInfo</p>
       ){
     </h2>
@@ -15,16 +15,14 @@
   </div>
   <div class="container justify-content-center align-items-center" id="accordion">
 
-
-
     <div class="row settings-section align-items-center pb-2" data-bs-toggle="collapse" href="#collapseAccount"
       role="button" aria-expanded="false" aria-controls="collapseExample">
-      <div class="col-10 d-flex align-items-center me-2">
+      <div class="col-7 col-sm-10 d-flex align-items-center me-2">
         <i class="fa fa-user"></i>
         <p class="m-0 settings-option ms-3">Account</p>
       </div>
 
-      <div class="col arrow"></div>
+      <div class="col-4 col-sm arrow"></div>
 
     </div>
 
@@ -56,8 +54,6 @@
             </button>
             <ul class="dropdown-menu fav-tech-dropdown">
               <div class="row h-100 m-2">
-
-
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
                   class="col-3 icon-choices" />
 
@@ -129,7 +125,7 @@
     {{! }}
     <div class="row settings-section align-items-center border-top border-light pb-2 pt-2" data-bs-toggle="collapse"
       href="#collapseAppearance" role="button" aria-expanded="false" aria-controls="collapseExample">
-      <div class="col-10 d-flex align-items-center me-2">
+      <div class="col-7 col-sm-10 d-flex align-items-center me-2">
         <i class="fa fa-eye" aria-hidden="true"></i>
         <p class="m-0 settings-option ms-3">Appearance</p>
       </div>
@@ -156,7 +152,7 @@
 
     <div class="row settings-section align-items-center border-top border-light pb-2 pt-2" data-bs-toggle="collapse"
       href="#collapseNotifications" role="button" aria-expanded="false" aria-controls="collapse">
-      <div class="col-10 d-flex align-items-center me-2">
+      <div class="col-7 col-sm-10 d-flex align-items-center me-2">
         <i class="fa fa-comments" aria-hidden="true"></i>
         <p class="m-0 settings-option ms-3">Notifications</p>
       </div>
@@ -171,7 +167,7 @@
 
     <div class="row settings-section align-items-center border-top border-light pb-2 pt-2" data-bs-toggle="collapse"
       href="#collapsePrivacySecurity" role="button" aria-expanded="false" aria-controls="collapseExample">
-      <div class="col-10 d-flex align-items-center me-2">
+      <div class="col-7 col-sm-10 d-flex align-items-center me-2">
         <i class="fa fa-lock"></i>
         <p class="m-0 settings-option ms-3">Privacy & Security</p>
       </div>
@@ -187,7 +183,7 @@
     <div class="row settings-section align-items-center border-bottom border-top border-light pb-2 pt-2"
       data-bs-toggle="collapse" href="#collapseAbout" role="button" aria-expanded="false"
       aria-controls="collapseExample">
-      <div class="col-10 d-flex align-items-center me-2">
+      <div class="col-7 col-sm-10 d-flex align-items-center me-2">
         <i class="fa fa-question"></i>
         <p class="m-0 settings-option ms-3">About</p>
       </div>
