--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -1,16 +1,24 @@
+body {
+  background-color: #22272e;
+}
+
 .settings-container {
-  width: 35rem;
-  box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
   border-radius: 5px;
+}
+
+.settings-function {
+  color: #1f6feb;
 }
 
 .settings-title {
   color: #c678dd;
+  font-size: calc(1rem + 1vw);
 }
 
 .back-arrow {
   position: relative;
-  left: 25px;
+  top: -20px;
+  left: 10px;
 }
 
 .back-arrow:hover {
@@ -53,7 +61,7 @@
 .bracket {
   color: #c678dd;
   font-size: 2rem;
-  margin-left: 4rem;
+  margin-left: 10%;
 }
 
 .bg-string {
@@ -65,7 +73,7 @@
 }
 
 .settings-bg {
-  background-color: #22272e;
+  /* background-color: #22272e; */
   color: #819d9f;
 }
 
@@ -79,6 +87,12 @@
   position: relative;
   font-size: 30px;
   transition: all 0.2s;
+}
+
+@media only screen and (max-width: 575px) {
+  .arrow::after {
+    right: -50px;
+  }
 }
 
 .settings-variable {
@@ -96,7 +110,6 @@
   height: 20rem;
 }
 
-/*  */
 .t:after {
   content: "";
   display: block;
@@ -131,6 +144,7 @@
 .fav-tech-dropdown {
   width: 15rem;
   height: 15rem;
+  background-color: #22272e;
 }
 
 .icon-choices {
@@ -142,4 +156,3 @@
   cursor: pointer;
   filter: brightness(60%);
 }
-
