--- a/public/css/user-info-modal.css
+++ b/public/css/user-info-modal.css
@@ -3,7 +3,7 @@
   position: absolute;
   top: 15%;
   right: 100%;
-  width: 22rem;
+  max-width: 22rem;
   min-height: fit-content;
   background-color: #32353b;
   color: #c9d1d9;
@@ -43,7 +43,8 @@
 }
 
 .favlang-usermodal{
-  margin-top: -30px;
+  margin-top: -10px;
+  width: 100px;
 }
 
 .dropdown-toggle::after{
@@ -55,3 +56,10 @@
     display: none;
   }
 }
+
+@media only screen and (max-width: 767px) { 
+  .modal-content {
+    right: 5%;
+    top: 250px;
+  }
+ }
