--- a/views/room.handlebars
+++ b/views/room.handlebars
@@ -120,9 +120,7 @@
       </div>
       <h3 class="accordion-heading">Users</h3>
       <div class="list-container">
-        <ul id="user-list" class="items-list text-right">
-
-        </ul>
+        <ul id="user-list" class="items-list text-right"></ul>
       </div>
       <h3 class="accordion-heading">Rooms</h3>
       <div class="list-container">
@@ -142,14 +140,12 @@
       </div>
       <h3 class="accordion-heading">DM's</h3>
       <div class="list-container">
-        <ul class="dm-list" id="direct-msg-list"> </ul>
+        <ul class="dm-list" id="direct-msg-list"></ul>
       </div>
     </div>
   </div>
 </aside>
 {{!-- ACCOUNT MENU END --}}
-
-
 
 </div>
 <svg xmlns="http://www.w3.org/2000/svg" class="svg-bottom" height="500px" viewBox="0 0 1440 320">
@@ -158,11 +154,14 @@
   </path>
 </svg>
 
-{{#if loggedIn}}
-  {{!-- script tag must be included in html to have access to the socket method --}}
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/logout.js"></script>
-  <script src="/js/user-info-modal.js"></script>
-  <script src="/js/direct-messages.js"></script>
-{{/if}}
-<script src="/js/logic.js"></script>
+
+{{!-- script tag must be included in html to have access to the socket method --}}
+<script src="/socket.io/socket.io.js"></script>--
+<script src="/js/room.js"></script>
+<script src="/js/slideout.js"></script>
+<script src="/js/user-info-modal.js"></script>
+<script src="/js/logout.js"></script>
+
+<script>
+  const socket = io();
+</script>
