added middleware auth, fixed users with dms list bug

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -156,3 +156,9 @@ body {
   cursor: pointer;
   filter: brightness(60%);
 }
+
+.remove-account-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
