--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -115,12 +115,16 @@
             </ul>
           </div>
           <button type="submit" class="btn bg-string mt-3">Save Info</button>
-          <hr>
-          <label for="remove-account">DELETE ACCOUNT</label>
-          <button class="btn btn-danger d-block mt-2" id="remove-account" data-toggle="modal"
-            data-target="#removeAccountModal">Remove account</button>
+
       </div>
       </form>
+      <hr>
+      <div class="remove-account-container">
+        <label for="remove-account">DELETE ACCOUNT</label>
+        <button class="btn btn-danger d-block mt-2" id="remove-account" data-toggle="modal"
+          data-target="#removeAccountModal">Remove account</button>
+      </div>
+
     </div>
     {{! }}
     <div class="row settings-section align-items-center border-top border-light pb-2 pt-2" data-bs-toggle="collapse"
