bug fix with dm page title

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -9,7 +9,7 @@
             <h1 class="main-title">"devHangOut"</h1>
             <h4 class="form-title">REGISTER</h4>
 
-            <form action="/public/js/logic.js" id="register-form"
+            <form id="register-form"
                 class="form-styles d-flex flex-column align-items-center gap-3">
                 <input type="text" name="register-username" id="registerUserName" autocomplete="on"
                     placeholder="userName" />
