refactored front end javascript

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -6,7 +6,7 @@
     <div class="container">
 
         <div class="wall-modal d-flex flex-column justify-content-start align-items-center m-auto">
-            <h1 class="main-title">"devHangOut"</h1>
+            <h1 class="main-title fst-italic">"Dev hangOut"</h1>
             <h4 class="form-title">REGISTER</h4>
 
             <form id="register-form"
