--- a/views/room.handlebars
+++ b/views/room.handlebars
@@ -48,7 +48,7 @@
 
 {{!-- CHAT  --}}
 <main class="chat-container container " id="main-chat">
-  <h2 class="room-title " id="room-name"># {{roomName}}</h2>
+  <h2 class="room-title " id="room-name"># {{roomname}}</h2>
   <ul class="chat-list-container" id="messages"></ul>
   <section class="row justify-content-center">
     <div class="col-md-10">
@@ -142,7 +142,7 @@
 </div>
 
 {{!-- script tag must be included in html to have access to the socket method --}}
-<script src="/socket.io/socket.io.js"></script>--
+<script src="/socket.io/socket.io.js"></script>
 <script src="/js/room.js"></script>
 <script src="/js/slideout.js"></script>
 <script src="/js/user-info-modal.js"></script>
