--- a/public/css/user-info-modal.css
+++ b/public/css/user-info-modal.css
@@ -2,14 +2,13 @@
   display: none;
   position: absolute;
   top: 15%;
-  right: 100%;
+  /* right: 100%; */
   max-width: 22rem;
+  background-color: white;
   min-height: fit-content;
-  background-color: #32353b;
-  color: #c9d1d9;
   margin-left: auto;
   margin-right: auto;
-  z-index: 99;
+  z-index: 99 !important;
 }
 
 .modal-pfp-styles {
@@ -19,12 +18,8 @@
 }
 
 .dm-input {
-  color: #98c379;
-  background-color: #5e636b;
   padding: 10px;
-  color: #c9cdd4;
   border-radius: 5px;
-  border: none;
   height: 2.5rem;
   font-size: 0.9rem;
   width: 100%;
